# RcloneGUI

./: .gitignore  .prettierignore  DESIGN.md  MEDIA.md  README.md  RELEASING.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-06-11-v03-browser-power.md  2026-06-11-v04-power-workflows.md
docs/superpowers/specs/: 2026-06-11-v03-browser-power-design.md  2026-06-11-v04-power-workflows-design.md
scripts/: debug-boot.mjs  screenshot.mjs
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_media_items.sql  002_job_history.sql
src-tauri/src/: background.rs  commands.rs  disk.rs  lib.rs  main.rs
src-tauri/src/rclone/: daemon.rs  detect.rs  mod.rs  port.rs  proxy.rs  stale.rs
src/components/layout/: app-shell.tsx  field.tsx  page.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  primitives.test.tsx  progress.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  sonner.tsx  table.tsx  tooltip.tsx
src/lib/: format.test.ts  format.ts  tauri.ts
src/store/: activity.ts  browser.test.ts  browser.ts  host.ts  jobs.ts  navigation.ts  presets.ts  saved-mounts.ts  saved-serves.ts  scheduled-jobs.ts  settings.ts  theme.ts
src/test/: setup.ts
src/theme/: tokens.css
tests/: smoke.spec.ts
(+80 files in other folders)
